--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "^1.11.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   }
 }
